--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
                   paramedic
                 </span>
                 <span>
-                  I followed a 5 month training at the WildCodeSchool and
-                  completed a 6 month internship at User Agency. I am focussed
-                  on React and Node (JavaScript), with a preference for the
-                  frontend, but I am always open to learning new stuff
+                  I followed a 5 month training at the Wild Code School and
+                  completed a 6 month internship at the User Agency. I am
+                  focussed on React and Node JavaScript, with a preference for
+                  the front-end, but I am always open to discover new
+                  technologies
                 </span>
               </p>
             </div>
@@ -181,7 +182,7 @@
                   <span class="date-project"> 29 May 2022 </span>
                   <span>
                     Pixel art games coded in 24 hours at the first hackathon of
-                    the wild code school
+                    the Wild Code School
                   </span>
                   <span>
                     Invest your money to get rich while protecting the planet
@@ -217,9 +218,9 @@
                 <p class="text-primary projects__list-item-text-primary">
                   <span class="date-project"> Spetember | November 2022 </span>
                   <span>
-                    Todo list management application that includes all
-                    functionalities such as creating, editing, deleting to-dos,
-                    possibility to log in to get your assigned to-do list
+                    To-do list management application that includes all
+                    functionalities. You can log in to create, edit and delete
+                    your own todo lists.
                   </span>
                   <br />
                   <span class="logo-devicon"
@@ -255,7 +256,7 @@
                   <span>
                     Online ambulance booking application. I am working on a
                     first version that I will present to a jury for an
-                    acreditation of learning</span
+                    accreditation of learning</span
                   >
                   <br />
                   <span class="logo-devicon">
@@ -269,12 +270,12 @@
                 </p>
                 <button class="btn btn-inv projects__btn-inv">
                   <a href="https://gitlab.com/thomas.dicola/ambu-project"
-                    >Frontend</a
+                    >Front-End</a
                   >
                 </button>
                 <button class="btn btn-inv projects__btn-inv">
                   <a href="https://gitlab.com/thomas.dicola/ambu-back"
-                    >BackEnd</a
+                    >Back-End</a
                   >
                 </button>
               </div>
@@ -298,7 +299,7 @@
                   <br />
                   <span class="date-project">June | July 2022</span>
                   <span>
-                    Singed lesson listening platform, partner project of the
+                    Sung lessons on a listening platform, partner project of the
                     Wild Code School
                   </span>
                   <!-- <br />
