--- a/index.html
+++ b/index.html
@@ -10,42 +10,19 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css" />
+  <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <title>Portfolio - Thomas</title>
   <meta name="description" content="Portfolio Thomas DC" />
 </head>
 
 <body>
-  <script>
-    const textElement = document.getElementById('text');
-    const text = textElement.innerText;
-    textElement.innerText = '';
-
-    let index = 0;
-    let speed = 100; // Vitesse du défilement (en millisecondes)
-
-    function type() {
-      if (index < text.length) {
-        textElement.innerText += text.charAt(index);
-        index++;
-        setTimeout(type, speed);
-      }
-    }
-
-    type();
   </script>
-  <header class="main-header">
-    <div class="main-header__logo-container">
-      <div class="main-header__logo-img-cont">
-        <img src="./assets/photo.jpeg" alt="logo Image" class="main-header__logo-img" />
-      </div>
-      <h4 class="main-header__logo-text">
-        <a href="./index.html">Thomas</a>
-      </h4>
-    </div>
+  <section id="home"></section>
+  <header class="main-header" id="home">
     <nav class="main-header__navigation">
       <ul class="main-header__navigation-links">
-        <li class="main-header__navigation-link">
-          <a href="./index.html">Home</a>
+        <li class="main-header__navigation-link" id="home-link">
+          <a href="./index.html#home">Home</a>
         </li>
         <li class="main-header__navigation-link">
           <a href="./index.html#about">About</a>
@@ -55,6 +32,18 @@
         </li>
       </ul>
     </nav>
+    <div class="main-header__logo-container">
+      <div class="main-header__logo-img-cont">
+        <a href="https://github.com/ThomasDCW" class="social-link">
+          <img src="./assets/github.png" alt="logo Image" class="main-header__logo-img" />
+        </a>
+      </div>
+      <div class="main-header__logo-img-cont">
+        <a href="https://www.linkedin.com/in/thomas-di-cola/" class="social-link">
+          <img src="./assets/linkedin.png" alt="logo Image" class="main-header__logo-img" />
+        </a>
+      </div>
+    </div>
     <!-- burger -->
     <div class="main-header__sm-scr-nav-btn">
       <div class="main-header__sm-scr-nav-btn-line"></div>
@@ -76,11 +65,9 @@
       </ul>
     </div>
   </header>
-
   <section id="home-hero" class="home-hero">
     <h1 id="text-animation"></h1>
   </section>
-
   <section id="about" class="about main-section">
     <div class="main-container">
       <h2 class="heading-secondary projects__heading-secondary">
@@ -89,9 +76,6 @@
       <div class="main-section__content">
         <div class="about__info">
           <div class="about__main-info">
-            <h3 class="heading-quaternary about__heading-quaternary">
-              My Story
-            </h3>
             <p class="text-primary about__text-primary">
               <span>
                 I am passionate about web development, which is why I decided
@@ -109,9 +93,6 @@
             </p>
           </div>
           <div class="about__skill-info">
-            <h3 class="heading-quaternary about__heading-quaternary">
-              My Skills
-            </h3>
             <ul class="about__skills">
               <li class="about__skill">html</li>
               <li class="about__skill">css</li>
@@ -277,7 +258,6 @@
                 Work in Music
               </h3>
               <p class="text-primary projects__list-item-text-primary">
-                <br />
                 <span class="date-project">June | July 2022</span>
                 <span>
                   Sung lessons on a listening platform, partner project of the
@@ -345,7 +325,7 @@
       <div class="main-container">
         <ul class="main-footer__links">
           <li class="main-footer__link">
-            <a href="./index.html">Home</a>
+            <a href="./index.html#home">Home</a>
           </li>
           <li class="main-footer__link">
             <a href="./index.html#about">About</a>
