--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="./index.html#about">About</a>
         </li>
         <li class="main-header__navigation-link">
-          <a href="./index.html#projects">Projects</a>
+          <a href="./index.html#projects">Personal projects</a>
         </li>
       </ul>
     </nav>
@@ -70,25 +70,18 @@
   </section>
   <section id="about" class="about main-section">
     <div class="main-container">
-      <h2 class="heading-secondary projects__heading-secondary">
-        <span class="heading-secondary__sm">About</span>
-      </h2>
       <div class="main-section__content">
         <div class="about__info">
           <div class="about__main-info">
             <p class="text-primary about__text-primary">
               <span>
-                I am passionate about web development, which is why I decided
-                to retrain after spending the last 7 years working as a
-                paramedic
+                🌍 Actually working at <a class="link" href="https://www.karbon.earth/">Karbon</a> as a Fullstack developer Javascript.
               </span>
               <span>
-                I followed a 5 month training at the Wild Code School and
-                completed a 6 month internship at the User Agency.
+                🌱 In charge of the "Eco-Score" that you will soon see appearing on your favorite food packaging.
               </span>
               <span>
-                I am currently working at Karbon as a fullstack developer in an apprenticeship program, as part of my
-                diploma validation for application developer.
+              💻 Self-taught, passionate, and curious, I also offer my services as a <a class="link">Freelance</a> developer.
               </span>
             </p>
           </div>
@@ -96,16 +89,16 @@
             <ul class="about__skills">
               <li class="about__skill">html</li>
               <li class="about__skill">css</li>
+              <li class="about__skill">wordpress</li>
               <li class="about__skill">javascript</li>
               <li class="about__skill">typescript</li>
-              <li class="about__skill">REACT</li>
-              <li class="about__skill">node</li>
+              <li class="about__skill">react</li>
               <li class="about__skill">next</li>
-              <li class="about__skill">nest</li>
+              <li class="about__skill">node</li>
               <li class="about__skill">prisma</li>
-              <li class="about__skill">jest</li>
-              <li class="about__skill">git</li>
-              <li class="about__skill">vscode</li>
+              <li class="about__skill">typeorm</li>
+              <li class="about__skill">rest</li>
+              <li class="about__skill">graphql</li>
             </ul>
           </div>
         </div>
@@ -122,6 +115,9 @@
         <i class="devicon-css3-plain"></i>
       </li>
       <li class="skills-showcase__list-item">
+        <i class="devicon-wordpress-plain"></i>
+      </li>
+      <li class="skills-showcase__list-item">
         <i class="devicon-javascript-plain"></i>
       </li>
       <li class="skills-showcase__list-item">
@@ -133,54 +129,81 @@
       <li class="skills-showcase__list-item">
         <i class="devicon-nodejs-plain"></i>
       </li>
-      <li class="skills-showcase__list-item">
-        <i class="devicon-git-plain"></i>
-      </li>
     </ul>
   </section>
 
   <section id="projects" class="projects main-section">
     <div class="main-container">
       <h2 class="heading-secondary projects__heading-secondary">
-        <span class="heading-secondary__sm">Projects</span>
+        <span class="heading-secondary__sm">Personal projects</span>
       </h2>
 
       <!-- GALLERY -->
       <div class="main-section__content">
         <div class="projects__list">
 
-          <!--BIGBILL -->
+          <!--MONAMBULANCE -->
           <div class="projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/bigbillfolio.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/ambufolio.png" alt="Project Image" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                BigBill
+                Ambu-booking
               </h3>
               <p class="text-primary projects__list-item-text-primary">
-                <span class="date-project"> 29 May 2022 </span>
+                <span class="date-project">Work in Progress ...</span>
                 <span>
-                  Pixel art games coded in 24 hours at the first hackathon of
-                  the Wild Code School
+                  Online ambulance booking application.
                 </span>
+                <span class="logo-devicon">
+                  <i class="devicon-typescript-plain colored"></i>
+                  <i class="devicon-react-original colored"></i>
+                  <i class="devicon-nodejs-plain colored"></i>
+                  <i class="devicon-graphql-plain colored"></i>
+                </span>
+              </p>
+              <a href="https://github.com/ambu-booking">
+                <button class="btn btn-inv projects__btn-inv">
+                  Codebase
+                </button>
+              </a>
+            </div>
+          </div>
+
+          <!-- MOVIES.COM -->
+          <div class="projects__list-item projects__list-item--inv">
+            <div class="projects__list-item-details">
+              <div class="projects__list-item-img-cont">
+                <img src="./assets/moviesfolio.png" alt="Project Image" class="projects__list-item-img" />
+              </div>
+              <h3 class="heading-tertiary projects__list-item-heading-tertiary">
+                Movies.com
+              </h3>
+              <p class="text-primary projects__list-item-text-primary">
+                <span class="date-project"> January 2023 </span>
                 <span>
-                  Invest your money to get rich while protecting the planet
+                  Search a movie in this single page application using themoviedb.org
+                  <br />
                 </span>
                 <br />
-                <span class="logo-devicon"><i class="devicon-javascript-plain colored"></i>
-                  <i class="devicon-react-original colored"></i></span>
+                <span class="logo-devicon">
+                  <i class="devicon-javascript-plain colored"></i>
+                  <i class="devicon-react-original colored"></i>
+                  <i class="devicon-redux-original colored"></i>
+                  <i class="devicon-tailwindcss-plain colored"></i>
+                </span>
               </p>
-              <a href="https://github.com/ThomasDCW/hackalillejs0522">
+              <a href="https://glittering-sprite-cb0be1.netlify.app/">
                 <button class="btn btn-inv projects__btn-inv">
-                  Code
+                  Try it
                 </button>
               </a>
             </div>
           </div>
 
           <!-- TODOLIST -->
-          <div class="projects__list-item projects__list-item--inv">
+          <div class="projects__list-item projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
                 <img src="./assets/todofolio.png" alt="Project Image" class="projects__list-item-img" />
@@ -191,60 +214,15 @@
               <p class="text-primary projects__list-item-text-primary">
                 <span class="date-project"> Spetember | November 2022 </span>
                 <span>
-                  To-do list management application that includes all
-                  functionalities. You can log in to create, edit and delete
+                  To-do list application that includes all
+                  functionalities. Create, edit and delete
                   your own todo lists.
                 </span>
                 <br />
                 <span class="logo-devicon"><i class="devicon-typescript-plain colored"></i>
                   <i class="devicon-nextjs-plain-wordmark colored"></i>
                   <i class="devicon-redux-original colored"></i>
-                  <i class="devicon-postgresql-plain colored"></i>
-                  <i class="devicon-jest-plain colored"></i></span>
               </p>
-              <a href="https://gitlab.com/thomas.dicola/todo">
-                <button class="btn btn-inv projects__btn-inv">
-                  Code
-                </button>
-              </a>
-            </div>
-          </div>
-
-          <!--MONAMBULANCE -->
-          <div class="projects__list-item">
-            <div class="projects__list-item-details">
-              <div class="projects__list-item-img-cont">
-                <img src="./assets/ambufolio.png" alt="Project Image" class="projects__list-item-img" />
-              </div>
-              <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                MonAmbulance
-              </h3>
-              <p class="text-primary projects__list-item-text-primary">
-                <span class="date-project">Work in Progress ...</span>
-                <span>
-                  Online ambulance booking application. I am working on a
-                  first version that I will present to a jury for an
-                  accreditation of learning
-                </span>
-                <span class="logo-devicon">
-                  <i class="devicon-typescript-plain colored"></i>
-                  <i class="devicon-nextjs-plain-wordmark colored"></i>
-                  <i class="devicon-redux-original colored"></i>
-                  <i class="devicon-nestjs-plain colored"></i>
-                  <i class="devicon-postgresql-plain colored"></i>
-                  <i class="devicon-jest-plain colored"></i>
-                </span>
-              </p>
-              <a href="https://gitlab.com/thomas.dicola/ambu-project">
-                <button class="btn btn-inv projects__btn-inv">
-                  Front-End
-                </button>
-              </a>
-              <a href="https://gitlab.com/thomas.dicola/ambu-back">
-                <button class="btn btn-inv projects__btn-inv">
-                  Back-End
-                </button>
-              </a>
             </div>
           </div>
 
@@ -260,59 +238,37 @@
               <p class="text-primary projects__list-item-text-primary">
                 <span class="date-project">June | July 2022</span>
                 <span>
-                  Sung lessons on a listening platform, partner project of the
-                  Wild Code School
-                </span>
-                <span>Agil method, daily, weekly meetings, code reviews
+                  Sung lessons on a listening platform.
                 </span>
                 <span class="logo-devicon"><i class="devicon-javascript-plain colored"></i>
                   <i class="devicon-react-original colored"></i>
-                  <i class="devicon-express-original-wordmark colored"></i>
-                  <i class="devicon-mysql-plain-wordmark colored"></i>
+                  <i class="devicon-nodejs-plain colored"></i>
                 </span>
               </p>
-              <a href="https://github.com/WildCodeSchool/2022-03-JS-Lille-project-3-g2-wim">
-                <button class="btn btn-inv projects__btn-inv">
-                  Code
-                </button>
-              </a>
             </div>
           </div>
 
-          <!-- MOVIES.COM -->
+          <!--BIGBILL -->
           <div class="projects__list-item projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/moviesfolio.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/bigbillfolio.png" alt="Project Image" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Movies.com
+                BigBill
               </h3>
               <p class="text-primary projects__list-item-text-primary">
-                <span class="date-project"> January 2023 </span>
+                <span class="date-project"> 29 May 2022 </span>
                 <span>
-                  Single Page Application with React, Redux, Redux Saga and
-                  TailwindCSS using TMDB API just for fun !
-                  <br />
+                  Pixel art games.
+                </span>
+                <span>
+                  Invest your money to get rich while protecting the planet
                 </span>
                 <br />
-                <span class="logo-devicon">
-                  <i class="devicon-javascript-plain colored"></i>
-                  <i class="devicon-react-original colored"></i>
-                  <i class="devicon-redux-original colored"></i>
-                  <i class="devicon-tailwindcss-plain colored"></i>
-                </span>
+                <span class="logo-devicon"><i class="devicon-javascript-plain colored"></i>
+                  <i class="devicon-react-original colored"></i></span>
               </p>
-              <a href="https://glittering-sprite-cb0be1.netlify.app/">
-                <button class="btn btn-inv projects__btn-inv">
-                  Visit
-                </button>
-              </a>
-              <a href="https://github.com/ThomasDCW/movies.com">
-                <button class="btn btn-inv projects__btn-inv">
-                  Code
-                </button>
-              </a>
             </div>
           </div>
         </div>
@@ -331,7 +287,7 @@
             <a href="./index.html#about">About</a>
           </li>
           <li class="main-footer__link">
-            <a href="./index.html#projects">Projects</a>
+            <a href="./index.html#projects">Personal Projects</a>
           </li>
         </ul>
         <div class="main-footer__mid-line"></div>
