--- a/index.html
+++ b/index.html
@@ -70,35 +70,53 @@
   </section>
   <section id="about" class="about main-section">
     <div class="main-container">
+      <h2 class="heading-secondary projects__heading-secondary">
+        <span class="heading-secondary__sm">About</span>
+      </h2>
       <div class="main-section__content">
         <div class="about__info">
           <div class="about__main-info">
             <p class="text-primary about__text-primary">
               <span>
-                🌍 Actually working at <a class="link" href="https://www.karbon.earth/">Karbon</a> as a Fullstack developer Javascript.
+                🌍 Actually working at <a class="link" href="https://www.karbon.earth/">Karbon</a> as a Fullstack
+                developer Javascript.
               </span>
               <span>
-                🌱 In charge of the "Eco-Score" that you will soon see appearing on your favorite food packaging.
+                🌱 Working on Environmental impact analysis.
               </span>
               <span>
-              💻 Self-taught, passionate, and curious, I also offer my services as a <a class="link">Freelance</a> developer.
+                ⌨️ Proficient in HTML, CSS, and JavaScript fundamentals.
+              </span>
+              <span>
+                ⚛️ Adheres to best practices in React.
+              </span>
+              <span>
+                🌐 Experience in GraphQL API development.
+              </span>
+              <span>
+                🖥️ Integration and Continuous Development (CI/CD)
+              </span>
+              <span>
+                🎨 Attentive to web design and user experience.
+              </span>
+              <span>
+                🤝 I offer my services as a <a class="link" href='https://www.malt.fr/profile/thomasdicola'>Freelance</a> developer.
               </span>
             </p>
           </div>
           <div class="about__skill-info">
             <ul class="about__skills">
-              <li class="about__skill">html</li>
-              <li class="about__skill">css</li>
-              <li class="about__skill">wordpress</li>
               <li class="about__skill">javascript</li>
               <li class="about__skill">typescript</li>
               <li class="about__skill">react</li>
               <li class="about__skill">next</li>
               <li class="about__skill">node</li>
               <li class="about__skill">prisma</li>
-              <li class="about__skill">typeorm</li>
               <li class="about__skill">rest</li>
               <li class="about__skill">graphql</li>
+              <li class="about__skill">CI/CD</li>
+              <li class="about__skill">TDD</li>
+              <li class="about__skill">AGILITY</li>
             </ul>
           </div>
         </div>
@@ -113,9 +131,6 @@
       </li>
       <li class="skills-showcase__list-item">
         <i class="devicon-css3-plain"></i>
-      </li>
-      <li class="skills-showcase__list-item">
-        <i class="devicon-wordpress-plain"></i>
       </li>
       <li class="skills-showcase__list-item">
         <i class="devicon-javascript-plain"></i>
