--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 🎨 Attentive to web design and user experience.
               </span>
               <span>
-                🤝 I offer my services as a <a class="link" href='https://www.malt.fr/profile/thomasdicola'>Freelance</a> developer.
+                🤝 I offer my services as a <a class="link"
+                  href='https://www.malt.fr/profile/thomasdicola'>Freelance</a> developer.
               </span>
             </p>
           </div>
@@ -109,6 +110,7 @@
               <li class="about__skill">javascript</li>
               <li class="about__skill">typescript</li>
               <li class="about__skill">react</li>
+              <li class="about__skill">react native</li>
               <li class="about__skill">next</li>
               <li class="about__skill">node</li>
               <li class="about__skill">prisma</li>
@@ -116,6 +118,7 @@
               <li class="about__skill">graphql</li>
               <li class="about__skill">CI/CD</li>
               <li class="about__skill">TDD</li>
+              <li class="about__skill">GITHUB</li>
               <li class="about__skill">AGILITY</li>
             </ul>
           </div>
@@ -157,8 +160,32 @@
       <div class="main-section__content">
         <div class="projects__list">
 
-          <!--MONAMBULANCE -->
+          <!-- KARBON -->
           <div class="projects__list-item">
+            <div class="projects__list-item-details">
+              <div class="projects__list-item-img-cont">
+                <img src="./assets/karbon.png" alt="Project Image" class="projects__list-item-img" />
+              </div>
+              <h3 class="heading-tertiary projects__list-item-heading-tertiary">
+                Karbon
+              </h3>
+              <p class="text-primary projects__list-item-text-primary">
+                <span class="date-project">2023 - 2024</span>
+                <span>
+                  Tool for measuring the environmental impact of food products.
+                </span>
+                <span class="logo-devicon">
+                  <i class="devicon-typescript-plain colored"></i>
+                  <i class="devicon-react-original colored"></i>
+                  <i class="devicon-nodejs-plain colored"></i>
+                  <i class="devicon-graphql-plain colored"></i>
+                </span>
+              </p>
+            </div>
+          </div>
+
+          <!--MONAMBULANCE -->
+          <div class="projects__list-item projects__list-item--inv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
                 <img src="./assets/ambufolio.png" alt="Project Image" class="projects__list-item-img" />
@@ -182,7 +209,7 @@
           </div>
 
           <!-- MOVIES.COM -->
-          <div class="projects__list-item projects__list-item--inv">
+          <div class="projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
                 <img src="./assets/moviesfolio.png" alt="Project Image" class="projects__list-item-img" />
@@ -208,7 +235,7 @@
           </div>
 
           <!-- TODOLIST -->
-          <div class="projects__list-item projects__list-item">
+          <div class="projects__list-item projects__list-item--inv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
                 <img src="./assets/todofolio.png" alt="Project Image" class="projects__list-item-img" />
@@ -232,7 +259,7 @@
           </div>
 
           <!--WORK IN MUSIC -->
-          <div class="projects__list-item projects__list-item--inv">
+          <div class="projects__list-item projects__list-itemv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
                 <img src="./assets/wimfolio.png" alt="Project Image" class="projects__list-item-img-mob" />
@@ -254,7 +281,7 @@
           </div>
 
           <!--BIGBILL -->
-          <div class="projects__list-item projects__list-item">
+          <div class="projects__list-item projects__list-item--inv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
                 <img src="./assets/bigbillfolio.png" alt="Project Image" class="projects__list-item-img" />
