--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <section id="projects" class="projects main-section">
     <div class="main-container">
       <h2 class="heading-secondary projects__heading-secondary">
-        <span class="heading-secondary__sm">Personal projects</span>
+        <span class="heading-secondary__sm">Projects</span>
       </h2>
 
       <!-- GALLERY -->
