--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,7 +27,7 @@
           <a href="./index.html#about">About</a>
         </li>
         <li class="main-header__navigation-link">
-          <a href="./index.html#projects">Personal projects</a>
+          <a href="./index.html#projects">Projects</a>
         </li>
       </ul>
     </nav>
@@ -167,7 +166,8 @@
                 <img src="./assets/karbon.png" alt="Project Image" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Karbon
+                <span>🔗</span>
+                <a href="https://editor.karbon.earth/" class='link'>Karbon</a>
               </h3>
               <p class="text-primary projects__list-item-text-primary">
                 <span class="date-project">2023 - 2024</span>
@@ -208,26 +208,26 @@
             </div>
           </div>
 
-          <!-- MOVIES.COM -->
+          <!-- Contact-form -->
           <div class="projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/moviesfolio.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/contact.png" alt="Project Image" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Movies.com
+                <span>🔗</span>
+                <a href="https://contact-form-with-sendgrid.vercel.app/" class='link'>Contact-form </a>
               </h3>
               <p class="text-primary projects__list-item-text-primary">
-                <span class="date-project"> January 2023 </span>
+                <span class="date-project"> June 2023 </span>
                 <span>
-                  Search a movie in this single page application using themoviedb.org
+                  Easy contact form with sendgrid
                   <br />
                 </span>
                 <br />
                 <span class="logo-devicon">
                   <i class="devicon-javascript-plain colored"></i>
-                  <i class="devicon-react-original colored"></i>
-                  <i class="devicon-redux-original colored"></i>
+                  <i class="devicon-nextjs-plain-wordmark colored"></i>
                   <i class="devicon-tailwindcss-plain colored"></i>
                 </span>
               </p>
@@ -319,7 +319,7 @@
             <a href="./index.html#about">About</a>
           </li>
           <li class="main-footer__link">
-            <a href="./index.html#projects">Personal Projects</a>
+            <a href="./index.html#projects">Projects</a>
           </li>
         </ul>
         <div class="main-footer__mid-line"></div>
