--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
           <div class="about__main-info">
             <p class="text-primary about__text-primary">
               <span>
-                🌍 Actually working at <a class="link" href="https://www.karbon.earth/">Karbon</a> as a Fullstack
-                developer Javascript.
+                🌍 Fullstack Developer Javascript at <a class="link" href="https://www.karbon.earth/">Karbon.</a> 
               </span>
               <span>
                 🌱 Working on Environmental impact analysis.
@@ -97,10 +96,6 @@
               </span>
               <span>
                 🎨 Attentive to web design and user experience.
-              </span>
-              <span>
-                🤝 I offer my services as a <a class="link"
-                  href='https://www.malt.fr/profile/thomasdicola'>Freelance</a> developer.
               </span>
             </p>
           </div>
@@ -221,7 +216,7 @@
               <p class="text-primary projects__list-item-text-primary">
                 <span class="date-project"> June 2023 </span>
                 <span>
-                  Easy contact form with sendgrid
+                  Receive mails from your clients easily.
                   <br />
                 </span>
                 <br />
@@ -246,8 +241,7 @@
               <p class="text-primary projects__list-item-text-primary">
                 <span class="date-project"> Spetember | November 2022 </span>
                 <span>
-                  To-do list application that includes all
-                  functionalities. Create, edit and delete
+                  To-do list application. Create, edit and delete
                   your own todo lists.
                 </span>
                 <br />
